# aoxchain

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.aoxc-real/runtime/: node_state.json
.github/workflows/: ci.yml
configs/: genesis.json  mainnet.toml  testnet.toml
configs/aoxhub/: localnet.toml
contracts/system/: bridge_logic.rs  governance.rs  staking.sol
crates/: README.md
crates/aoxcai/: README.md
crates/aoxcai/src/: audit.rs  lib.rs  (+2 more)
crates/aoxcdata/: README.md
crates/aoxcenergy/: README.md
crates/aoxcexec/: README.md
crates/aoxchal/: Cargo.toml  README.md
crates/aoxchub/: .gitignore  Cargo.toml  Dioxus.toml  index.html  package-lock.json  package.json
crates/aoxchub/src-tauri/: Cargo.toml  tauri.conf.json
crates/aoxchub/src-tauri/capabilities/: default.json
crates/aoxchub/src-tauri/src/: lib.rs  main.rs
crates/aoxckit/: README.md
crates/aoxclibs/: README.md
crates/aoxcmd/: Cargo.toml  README.md  build.rs
crates/aoxcmob/: README.md
crates/aoxcnet/: Cargo.toml  README.md
crates/aoxconfig/: README.md
crates/aoxcontract/: README.md
crates/aoxcore/: README.md
crates/aoxcrpc/: README.md
crates/aoxcsdk/: README.md
crates/aoxcunity/: AOXC_COVENANT_CONSENSUS.md  Cargo.toml  README.md
crates/aoxcvm/: README.md
docs/: AUDIT_READINESS_AND_OPERATIONS.md  KEY_TYPES_AND_INTEROP_GUIDE_EN.md
docs/src/: KEY_TYPES_AND_INTEROP_GUIDE_EN.md  SUMMARY.md  TESTNET_MAINNET_HIZALI_9_ETAP_PROGRAMI_TR.md
scripts/: quality_gate.sh  run-local.sh
tests/: Cargo.toml
tests/src/: lib.rs  unity_consensus_integration.rs
(+79 files in other folders)
